--- a/BudgetTracker_BE/.env
+++ b/BudgetTracker_BE/.env
@@ -1,2 +1,4 @@
-DB_CONNECTION=mongodb+srv://brandonwilbert:LNXrocks!@budgettrackercluster.2mvk81z.mongodb.net/?authMechanism=DEFAULT
-PORT=5000
+DB_PORT=5000
+DB_USER=brandonwilbert
+DB_PASSWORD=LNXrocks!
+DB_NAME=budgettrackercluster
