--- a/BudgetTracker_BE/package.json
+++ b/BudgetTracker_BE/package.json
@@ -2,8 +2,7 @@
   "name": "budgettracker_be",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
-  "type": "module",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
@@ -18,6 +17,9 @@
     "mongoose": "^7.2.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.2.5",
+    "nodemon": "^2.0.22",
+    "typescript": "^5.0.4"
   }
 }
