--- a/src/package.json
+++ b/src/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "dotenv": "^16.1.0",
     "express": "^4.18.2",
-    "mongoose": "^7.2.2"
+    "mongoose": "^7.2.2",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
