--- a/app/ios/app/Info.plist
+++ b/app/ios/app/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -58,7 +58,6 @@
 		<string>NotoSans-Bold.ttf</string>
 		<string>NotoSans-BoldItalic.ttf</string>
 		<string>NotoSans-ExtraBold.ttf</string>
-		<string>NotoSans-ExtraBoldItalic.ttf</string>
 		<string>NotoSans-ExtraLight.ttf</string>
 		<string>NotoSans-ExtraLightItalic.ttf</string>
 		<string>NotoSans-Italic.ttf</string>
