--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,8 @@
     "react": "18.2.0",
     "react-native": "0.71.11",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-paper": "^5.8.0",
+    "react-native-really-awesome-button": "^2.0.4",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.21.0",
