--- a/app/package.json
+++ b/app/package.json
@@ -11,15 +11,17 @@
   },
   "dependencies": {
     "@react-navigation/drawer": "^6.6.2",
-    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "react": "18.2.0",
-    "react-native": "0.71.11",
+    "react-native": "^0.71.11",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-paper": "^5.8.0",
     "react-native-really-awesome-button": "^2.0.4",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.21.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.9.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
