--- a/app/package.json
+++ b/app/package.json
@@ -10,11 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "react": "18.2.0",
-    "react-native": "^0.71.11",
+    "react-native": "0.71.11",
+    "react-native-dropdown-select-list": "^2.0.4",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-paper": "^5.8.0",
     "react-native-really-awesome-button": "^2.0.4",
